--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ body {
   line-height: 1.6;
   font-weight: var(--font-weight-normal);
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
 }
 
 h1,
